# AudioToTextTranscriber

./: .gitignore  README.md  build-appimage.sh  build.sh  gtk-gui-download-models.py  gtk-gui.py  inject-to-whisper-cpp.py  io.github.JaredTweed.AudioToTextTranscriber.yml  main.py  pyproject.toml  wrapper.sh  z-explained.md
data/: io.github.JaredTweed.AudioToTextTranscriber.desktop
flatpak/: io.github.JaredTweed.AudioToTextTranscriber.desktop  io.github.JaredTweed.AudioToTextTranscriber.metainfo.xml  io.github.JaredTweed.AudioToTextTranscriber.yml
packaging/: io.github.JaredTweed.AudioToTextTranscriber.yml
src/: helpers.py  io.github.JaredTweed.AudioToTextTranscriber.metainfo.xml  io.github.JaredTweed.AudioToTextTranscriber.yml  main.py  model.py  package.sh  settings.py  transcribe.py  ui.py  view_transcripts.py  whisperapp.4.0.py
src/audio_to_text_transcriber/: main.py  model.py  settings.py  transcribe.py  ui.py  view_transcripts.py
src/flatpak/: .gitignore  0-building.md  audio-to-text-transcriber  build.sh  io.github.JaredTweed.AudioToTextTranscriber.yml  main.py  whisperapp.4.0.py
src/flatpak/.flatpak-builder/cache/refs/heads/x86_64-io.github.JaredTweed.AudioToTextTranscriber.yml/: build-cffi  build-numpy  build-portaudio  build-pycparser  build-pyyaml  build-sounddevice  build-ui  build-whisper-and-py-src  cleanup  finish  init
src/flatpak/.flatpak-builder/checksums/: x86_64-io.github.JaredTweed.AudioToTextTranscriber.yml
src/flatpak/.flatpak-builder/downloads/82375859fac2e73295a4ab3fc60bd4782743157adc339561c1f1142af472f505/: sounddevice-0.5.2-py3-none-any.whl
src/flatpak/repo/: summary  summary.idx
src/flatpak/repo/refs/heads/app/io.github.JaredTweed.AudioToTextTranscriber/x86_64/: master
src/flatpak/repo/refs/heads/runtime/io.github.JaredTweed.AudioToTextTranscriber.Debug/x86_64/: master
src/flatpak/repo/summaries/: 01685157298dc679702e11af689750fd5db0fbf671b1a5c1ac4136281c6ddc5c-78f938d2c7bf5eb922323fffdbaf3d764c1d1b63c0e46272eb28ef9b5bca5c5c.delta  58cc52c57fbeff31412451dbe86db3647ab84c862a7e856b425ca49496ec2aaf-78f938d2c7bf5eb922323fffdbaf3d764c1d1b63c0e46272eb28ef9b5bca5c5c.delta
